--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-macroquad = "0.3.0-alpha.12"
+macroquad = "0.3.0-alpha.14"
 rodio = "0.13.0"
+
+[replace]
+"macroquad:0.3.0-alpha.14" = { git = "https://github.com/not-fl3/macroquad", branch="master"}
